--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,16 +6,17 @@
       "dependsOn": [
         {
           "category": "auth",
-          "resourceName": "amplifyapp2b2bc6fc2b2bc6fc",
+          "resourceName": "amplifyapp07257b4407257b44",
           "attributes": [
             "UserPoolId",
             "AppClientIDWeb",
-            "AppClientID"
+            "AppClientID",
+            "IdentityPoolId"
           ]
         }
       ]
     },
-    "amplifyapp2b2bc6fc2b2bc6fc": {
+    "amplifyapp07257b4407257b44": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
