switch to Cognito user pool authorization type for the API

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -60,19 +60,12 @@
       "output": {
         "authConfig": {
           "defaultAuthentication": {
-            "authenticationType": "API_KEY",
-            "apiKeyConfig": {
-              "apiKeyExpirationDays": 7
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authamplifyapp07257b4407257b44"
             }
           },
-          "additionalAuthenticationProviders": [
-            {
-              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-              "userPoolConfig": {
-                "userPoolId": "authamplifyapp07257b4407257b44"
-              }
-            }
-          ]
+          "additionalAuthenticationProviders": []
         }
       }
     }
