--- a/package.json
+++ b/package.json
@@ -4,13 +4,25 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^2.19.0",
+    "@ionic/react": "^6.1.9",
+    "@ionic/react-router": "^6.1.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.41",
+    "@types/react": "^16.14.3",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
     "aws-amplify": "^4.3.24",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "ionicons": "^6.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
